# api.palzoltan.net

./: .env.template  .flake8  .gitignore  .isort.cfg  README.md  config.py  errors.py  main.py  pyproject.toml  requirements.txt  run.py  setup_env.sh
.github/workflows/: Makefile  deployment.yml  deployment_old.yml
api/: __init__.py  db.py
api/climate_change/: climate_change.py
api/movie_connections/: movie_connections.py
api/time_travellers/: __init__.py  models.py  time_travellers.py
apis/: earthquakes.py  movie_connections.py  power_of_words.py  sentiment_analyzer.py  time_travellers.py
libs/: api_factory.py  common_functions.py  functions.py  responses.py
libs/auth/: basic.py  bearer_token.py
libs/db/: db_client.py  db_mapping.py
libs/middlewares/: authentication_middleware.py  query_flattening_middleware.py  request_context_middleware.py
models/: feed_db_filters.py
resources/: power_of_words.py
tests/: test_time_travellers.py
