[tool.poetry]
name = "api.palzoltan.net"
version = "2.2.5"
description = ""
authors = ["Zoltan Pal <palzoltanet@gmail.com>"]
readme = "README.md"
packages = [{include = "apis"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
python-multipart = "^0.0.20"
pydantic = "^2.10.6"
pyjwt = "^2.10.1"
palzlib = {path = "../libs/palzlib/dist/palzlib-0.4.3.tar.gz"}
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_unused_configs = "True"
disallow_untyped_defs = "False"
ignore_missing_imports = "False"

[tool.isort]
known_third_party = ["dotenv", "pytest", "sqlalchemy"]
